syntax = "proto3";

package erc20.types.v1;

import "google/protobuf/timestamp.proto";

message Events {
  repeated Transfer transfers = 1;
  repeated BalanceChange balance_changes = 2;
}

enum BalanceChangeType {
  BALANCE_CHANGE_TYPE_UNSPECIFIED = 0; // cannot determine balance change
  BALANCE_CHANGE_TYPE_1 = 1; // easy case where storage change is in the same call as the Transfer call
  BALANCE_CHANGE_TYPE_2 = 2; // storage change is in a different call than the Transfer call
}

message BalanceChange {
  // -- block --
  uint64 block_num = 1;
  string block_hash = 2;
  google.protobuf.Timestamp timestamp = 3;
  string date = 4;

  // -- transaction --
  string transaction_id = 5;

  // -- call --
  uint32 call_index = 6;

  // -- log --
  uint32 log_index = 7; // Index is the index of the log relative to the transaction. This index is always populated regardless of the state revertion of the the call that emitted this log.
  uint32 log_block_index = 8; // BlockIndex represents the index of the log relative to the Block.
  uint64 log_ordinal = 9; // the block's global ordinal when the transfer was recorded.

  // -- storage change --
  string storage_key = 10;
  uint64 storage_ordinal = 11;

  // -- indexing --
  uint32 index = 12; // incrementing index for ordering
  uint64 version = 13; // version used as “ordering” argument (block_num << 32 + index)

  // -- balance change --
  string contract = 14;
  string owner = 15;
  string old_balance = 16;
  string new_balance = 17;
  string amount = 18; // difference between old_balance and new_balance
  int32 change_type = 19; // type enum isn't supported yet as a leaf node
}

message Transfer {
  // -- block --
  uint64 block_num = 1;
  string block_hash = 2;
  google.protobuf.Timestamp timestamp = 3;
  string date = 4;

  // -- transaction --
  string transaction_id = 5;

  // -- call --
  uint32 call_index = 6;

  // -- log --
  uint32 log_index = 7; // Index is the index of the log relative to the transaction. This index is always populated regardless of the state revertion of the the call that emitted this log.
  uint32 log_block_index = 8; // BlockIndex represents the index of the log relative to the Block.
  uint64 log_ordinal = 9; // the block's global ordinal when the transfer was recorded.

  // -- transfer --
  string contract = 10;
  string from = 11;
  string to = 12;
  string value = 13;
}

message BalanceChangeStats {
  // current
  uint64 current_type1_balance_changes = 1;
  uint64 current_type2_balance_changes = 2;
  uint64 current_balance_changes = 3;
  uint64 current_transfers = 4;
  uint64 current_transfers_not_matched = 5;
  string current_valid_rate = 6;

  // total
  uint64 total_type1_balance_changes = 10;
  uint64 total_type2_balance_changes = 11;
  uint64 total_balance_changes = 12;
  uint64 total_transfers = 13;
  uint64 total_transfers_not_matched = 14;
  string total_valid_rate = 15;

  // block
  uint64 block_number = 99;
  google.protobuf.Timestamp timestamp = 100;
}