syntax = "proto3";

package evm.tokens.contracts.types.v1;

message Events {
  repeated ContractChange contract_changes = 1;
  repeated ContractCreation contract_creations = 2;
}

// TO-DO: import from `evem-tokens-balances.proto`
enum Algorithm {
  ALGORITHM_UNSPECIFIED = 0;

  // ERC-20
  ALGORITHM_LOG = 1; // log event
  ALGORITHM_RPC = 5; // RPC call
}

message ContractChange {
  // -- transaction --
  bytes transaction_id = 5;
  bytes from = 6;
  bytes to = 7;

  // -- call --
  // TO-DO: add caller field
  // https://github.com/pinax-network/substreams-evm-tokens/issues/17
  // bytes caller = 8;

  // -- ordering --
  uint64 ordinal = 10; // log.ordinal
  uint64 index = 11; // relative index
  uint64 global_sequence = 12; // latest global sequence (block_num << 32 + index)

  // -- contract --
  bytes address = 20;
  string name = 21;
  string symbol = 22;
  int32 decimals = 23;

  // -- debug --
  Algorithm algorithm = 99;
}

message ContractCreation {
  // -- transaction --
  bytes transaction_id = 5;
  bytes from = 6;
  bytes to = 7;

  // -- ordering --
  uint64 ordinal = 10; // log.ordinal
  uint64 index = 11; // relative index
  uint64 global_sequence = 12; // latest global sequence (block_num << 32 + index)

  // -- contract --
  bytes address = 20;
}
