syntax = "proto3";

package evm.tokens.prices.types.v1;

message Events {
  repeated Swap swaps = 1;
  repeated Sync syncs = 2;
  repeated PairCreated pairs_created = 3;
}

message PairCreated {
  // -- transaction --
  bytes transaction_id = 1;
  bytes from = 2;
  bytes to = 3;

  // -- log --
  bytes address = 5;

  // -- pair created --
  bytes token0 = 10;
  bytes token1 = 11;
  bytes pair = 12;
}

message Sync {
  // -- transaction --
  bytes transaction_id = 1;

  // -- log --
  bytes address = 5;

  // -- sync --
  string reserve0 = 10;
  string reserve1 = 11;
}

message Swap {
  // -- transaction --
  bytes transaction_id = 1;

  // -- log --
  bytes address = 5;

  // -- swap --
  string amount0_in = 10;
  string amount0_out = 11;
  string amount1_in = 12;
  string amount1_out = 13;
  bytes sender = 14;
  bytes to = 15;
}
